--- a/GoogleMapsCoordonates/GoogleMapsCoordonates.csproj
+++ b/GoogleMapsCoordonates/GoogleMapsCoordonates.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\ListExtensions.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\Home\RouteInput.cs" />
     <Compile Include="Models\Routes.designer.cs">
